Bug 266837 - Unable to close rekonq, always restarts itself
Summary: Unable to close rekonq, always restarts itself
Status: RESOLVED FIXED
Alias: None
Product: rekonq
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: latest git snapshot
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: 0.7
Assignee: Andrea Diamantini
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-02-21 19:26 UTC by Heinz Wiesinger
Modified: 2011-03-08 19:49 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Heinz Wiesinger 2011-02-21 19:26:29 UTC
Version:           latest git snapshot (using KDE 4.5.5) 
OS:                Linux

I haven't been able to reproduce it yet, but sometimes I am not able to close rekonq. Clicking the close button in the titlebar, Alt-F4, or the "Close" entry in the window menu all lead to the same result of rekonq seemingly closing it's main window (it does disappear), but it immediatly afterwards reappearing with a blank white page instead of the usual favourites.
So far the only way to close it in that situation has been with "killall".

Reproducible: Sometimes
Comment 1 Christoph Feck 2011-02-21 20:07:09 UTC
I see this behavior when downloads running in the background.
Comment 2 Panagiotis Papadopoulos 2011-03-06 17:49:44 UTC
This sometimes also happens to me for no apparent reason.
Comment 3 Andrea Diamantini 2011-03-08 19:49:36 UTC
Git commit 4141eedc2fd5c014896c6196bf998b93c520a97f by Andrea Diamantini.
Committed on 08/03/2011 at 19:48.
Pushed by adjam into branch 'master'.

This commit fix bug 266837 about the (in)ability to close rekonq,
but IT CHANGES Application::mainWindow() behavior to an unsafe mode.
It is now basically allowed to return a null pointer, leading to other possible crashes.

Some days of testing since now, for this.

BUG:266837

M  +6    -6    src/application.cpp     

http://commits.kde.org/rekonq/4141eedc2fd5c014896c6196bf998b93c520a97f