This commit fix bug 266837 about the (in)ability to close rekonq, but IT CHANGES Application::mainWindow() behavior to an unsafe mode. It is now basically allowed to return a null pointer, leading to other possible crashes.

Some days of testing since now, for this.

BUG:266837